<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.MainActivity"
        android:background="@color/common_bg">

        <com.kq.platform.kq_common.ui.widget.base.TitleBar
            android:id="@+id/base_title_bar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/base_head_color"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_main_top_layout">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/tv_alarm_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="8"
                    android:layout_marginBottom="13dp" />

                <TextView
                    android:id="@+id/tv_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/txt_alarm_message"
                    android:layout_below="@+id/tv_alarm_count" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/tv_available_product_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="13dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="8"/>

                <TextView
                    android:id="@+id/tv_available_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/txt_available_product"
                    android:layout_below="@+id/tv_available_product_count" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/tv_my_work_order_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="13dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="8" />

                <TextView
                    android:id="@+id/tv_my_work_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/txt_alarm_message"
                    android:layout_below="@+id/tv_my_work_order_count" />
            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="14dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="所有产品"
                android:textSize="14sp"
                android:textColor="@color/default_text_color"/>

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="编辑"
                android:textColor="@color/default_text_color"
                android:textSize="14sp"/>

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="1dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/nav_user_head"
            android:gravity="center"
            android:orientation="vertical">

            <com.hnhz.thziot.ui.widget.Circleview
                android:id="@+id/iv_user_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@mipmap/icon_default_avatar" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="张三"
                android:textColor="@color/default_text_color"
                android:textSize="14sp" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nav_op"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/ll_head">


        <com.kq.platform.kq_common.ui.widget.IconTextItemLayout
            android:id="@+id/it_secure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_comment_item"
            android:clickable="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            app:itlIcon="@mipmap/icon_secure"
            app:itlText="@string/txt_nav_secure"
            app:itlTextColor="@color/default_text_color"
            app:itlTextSize="17dp"
            android:focusable="true" />

        <com.kq.platform.kq_common.ui.widget.IconTextItemLayout
            android:id="@+id/it_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_comment_item"
            android:clickable="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            app:itlIcon="@mipmap/icon_my_wallet"
            app:itlText="@string/txt_nav_my_wallet"
            app:itlTextColor="@color/default_text_color"
            app:itlTextSize="17dp"
            android:focusable="true" />

        <com.kq.platform.kq_common.ui.widget.IconTextItemLayout
            android:id="@+id/it_address_manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_comment_item"
            android:clickable="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            app:itlIcon="@mipmap/icon_addr_manage"
            app:itlText="@string/txt_nav_addr_manage"
            app:itlTextColor="@color/default_text_color"
            app:itlTextSize="17dp"
            android:focusable="true" />

        <com.kq.platform.kq_common.ui.widget.IconTextItemLayout
            android:id="@+id/it_work_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_comment_item"
            android:clickable="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            app:itlIcon="@mipmap/icon_work_order"
            app:itlText="@string/txt_nav_work_order"
            app:itlTextColor="@color/default_text_color"
            app:itlTextSize="17dp"
            android:focusable="true" />

        <com.kq.platform.kq_common.ui.widget.IconTextItemLayout
            android:id="@+id/it_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_comment_item"
            android:clickable="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            app:itlIcon="@mipmap/icon_about_us"
            app:itlText="@string/txt_nav_about_us"
            app:itlTextColor="@color/default_text_color"
            app:itlTextSize="17dp"
            android:focusable="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="退出登录"
            android:textColor="@color/base_color"
            android:textSize="14sp"
            android:layout_marginBottom="33dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>